[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/BuscaPalavras.gd" type="Script" id=1]
[ext_resource path="res://SpritesBlocagem/Seta.png" type="Texture" id=2]
[ext_resource path="res://SpritesBlocagem/Bolsa.png" type="Texture" id=3]
[ext_resource path="res://Cenas/CenasPrefab/PalavrasPopUp.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Palavras.gd" type="Script" id=5]
[ext_resource path="res://Scripts/InicializadorBuscaPalavras.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Palavras" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Palavra1" type="KinematicBody2D" parent="Palavras"]
position = Vector2( 827.494, 161.482 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
palavra = "Palavra1"

[node name="Palavra" type="Button" parent="Palavras/Palavra1"]
margin_right = 109.0
margin_bottom = 39.0002
text = "Palavra1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palavra2" type="KinematicBody2D" parent="Palavras"]
position = Vector2( 237.795, 220.461 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
palavra = "Palavra2"

[node name="Palavra" type="Button" parent="Palavras/Palavra2"]
margin_right = 109.0
margin_bottom = 39.0002
text = "Palavra2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palavra3" type="KinematicBody2D" parent="Palavras"]
position = Vector2( 137.595, 74.5698 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
palavra = "Palavra3"

[node name="Palavra" type="Button" parent="Palavras/Palavra3"]
margin_right = 109.0
margin_bottom = 39.0002
text = "Palavra3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palavra4" type="KinematicBody2D" parent="Palavras"]
position = Vector2( 709.068, 34.9836 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
palavra = "Palavra4"

[node name="Palavra" type="Button" parent="Palavras/Palavra4"]
margin_right = 109.0
margin_bottom = 39.0002
text = "Palavra4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palavra5" type="KinematicBody2D" parent="Palavras"]
position = Vector2( 710.766, 282.859 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
palavra = "Palavra5"

[node name="Palavra" type="Button" parent="Palavras/Palavra5"]
margin_right = 109.0
margin_bottom = 39.0002
text = "Palavra5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palavra6" type="KinematicBody2D" parent="Palavras"]
position = Vector2( 82.9436, 333.168 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
palavra = "Palavra6"

[node name="Palavra" type="Button" parent="Palavras/Palavra6"]
margin_right = 109.0
margin_bottom = 39.0002
text = "Palavra6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bolsa" type="Button" parent="."]
margin_left = 935.796
margin_top = 507.429
margin_right = 1039.8
margin_bottom = 617.429
rect_scale = Vector2( 0.7, 0.7 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="."]
margin_left = 9.2692
margin_top = 513.222
margin_right = 161.269
margin_bottom = 605.222
rect_scale = Vector2( 1, 0.8 )
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PalavrasPopUp" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="Palavras/Palavra1/Palavra" to="Palavras/Palavra1" method="_on_Palavra_pressed"]
[connection signal="pressed" from="Palavras/Palavra2/Palavra" to="Palavras/Palavra2" method="_on_Palavra_pressed"]
[connection signal="pressed" from="Palavras/Palavra3/Palavra" to="Palavras/Palavra3" method="_on_Palavra_pressed"]
[connection signal="pressed" from="Palavras/Palavra4/Palavra" to="Palavras/Palavra4" method="_on_Palavra_pressed"]
[connection signal="pressed" from="Palavras/Palavra5/Palavra" to="Palavras/Palavra5" method="_on_Palavra_pressed"]
[connection signal="pressed" from="Palavras/Palavra6/Palavra" to="Palavras/Palavra6" method="_on_Palavra_pressed"]
[connection signal="pressed" from="Bolsa" to="PalavrasPopUp" method="_on_Bolsa_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
